WIP: clean up - card

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -8,6 +8,7 @@
 // - Base
 //   - Base override
 // - Button
+// - Card
 // - Chip
 // - Code
 // - Cooked
@@ -42,6 +43,7 @@
 @import 'common/base';
 @import 'common/base-override';
 @import 'common/button';
+@import 'common/card';
 @import 'common/chip';
 @import 'common/code';
 @import 'common/cooked';
