--- a/scss/common/_notification.scss
+++ b/scss/common/_notification.scss
@@ -1,8 +1,8 @@
 // Alert
 
 .alert {
-  @include card;
-  @include card-block;
+  @extend %card;
+  @extend %card-block;
 
   margin-bottom: $card-margin-y;
 }
