--- a/scss/common/_user-card.scss
+++ b/scss/common/_user-card.scss
@@ -24,7 +24,7 @@
 }
 
 #user-card {
-  @include card;
+  @extend %card;
 
   min-height: 0;
 
@@ -103,7 +103,7 @@
   }
 
   .card-content {
-    @include card-block;
+    @extend %card-block;
 
     background-color: color-chooser($black-secondary, $white-secondary);
     display: flex;
