WIP: clean up - minor post fixes

--- a/common/common.scss
+++ b/common/common.scss
@@ -376,6 +376,7 @@ div.poll .poll-buttons a,
 nav.post-controls button,
 nav.post-controls .show-replies,
 .small-action button,
+.topic-map .buttons .btn,
 .topic-map .link-summary a,
 .topic-meta-data .post-info a,
 #reply-control .contents .submit-panel .cancel,
@@ -422,6 +423,7 @@ div.poll .poll-buttons a:focus,
 nav.post-controls button:focus,
 nav.post-controls .show-replies:focus,
 .small-action button:focus,
+.topic-map .buttons .btn:focus,
 .topic-map .link-summary a:focus,
 .topic-meta-data .post-info a:focus,
 #reply-control .contents .submit-panel .cancel:focus,
@@ -448,6 +450,7 @@ nav.post-controls .show-replies:focus,
   nav.post-controls button:hover,
   nav.post-controls .show-replies:hover,
   .small-action button:hover,
+  .topic-map .buttons .btn:hover,
   .topic-map .link-summary a:hover,
   .topic-meta-data .post-info a:hover,
   #reply-control .contents .submit-panel .cancel:hover,
@@ -474,6 +477,7 @@ div.poll .poll-buttons a:active,
 nav.post-controls button:active,
 nav.post-controls .show-replies:active,
 .small-action button:active,
+.topic-map .buttons .btn:active,
 .topic-map .link-summary a:active,
 .topic-meta-data .post-info a:active,
 #reply-control .contents .submit-panel .cancel:active,
@@ -499,6 +503,7 @@ div.poll .poll-buttons a:focus,
 nav.post-controls button:focus,
 nav.post-controls .show-replies:focus,
 .small-action button:focus,
+.topic-map .buttons .btn:focus,
 .topic-map .link-summary a:focus,
 .topic-meta-data .post-info a:focus,
 #reply-control .contents .submit-panel .cancel:focus,
@@ -523,6 +528,7 @@ div.poll .poll-buttons a[disabled],
 nav.post-controls button[disabled],
 nav.post-controls [disabled].show-replies,
 .small-action button[disabled],
+.topic-map .buttons [disabled].btn,
 .topic-map .link-summary a[disabled],
 .topic-meta-data .post-info a[disabled],
 #reply-control .contents .submit-panel [disabled].cancel,
@@ -544,6 +550,7 @@ div.poll .poll-buttons a.disabled,
 nav.post-controls button.disabled,
 nav.post-controls .disabled.show-replies,
 .small-action button.disabled,
+.topic-map .buttons .disabled.btn,
 .topic-map .link-summary a.disabled,
 .topic-meta-data .post-info a.disabled,
 #reply-control .contents .submit-panel .disabled.cancel,
@@ -569,6 +576,7 @@ div.poll .poll-buttons a.btn-danger,
 nav.post-controls button.btn-danger,
 nav.post-controls .btn-danger.show-replies,
 .small-action button.btn-danger,
+.topic-map .buttons .btn-danger.btn,
 .topic-map .link-summary a.btn-danger,
 .topic-meta-data .post-info a.btn-danger,
 #reply-control .contents .submit-panel .btn-danger.cancel,
@@ -590,6 +598,7 @@ div.poll .poll-buttons a.cancel,
 nav.post-controls button.cancel,
 nav.post-controls .cancel.show-replies,
 .small-action button.cancel,
+.topic-map .buttons .cancel.btn,
 .topic-map .link-summary a.cancel,
 .topic-meta-data .post-info a.cancel,
 #reply-control .contents .submit-panel .cancel,
@@ -615,6 +624,7 @@ div.poll .poll-buttons a.btn-danger:focus,
 nav.post-controls button.btn-danger:focus,
 nav.post-controls .btn-danger.show-replies:focus,
 .small-action button.btn-danger:focus,
+.topic-map .buttons .btn-danger.btn:focus,
 .topic-map .link-summary a.btn-danger:focus,
 .topic-meta-data .post-info a.btn-danger:focus,
 #reply-control .contents .submit-panel .btn-danger.cancel:focus,
@@ -636,6 +646,7 @@ div.poll .poll-buttons a.cancel:focus,
 nav.post-controls button.cancel:focus,
 nav.post-controls .cancel.show-replies:focus,
 .small-action button.cancel:focus,
+.topic-map .buttons .cancel.btn:focus,
 .topic-map .link-summary a.cancel:focus,
 .topic-meta-data .post-info a.cancel:focus,
 #reply-control .contents .submit-panel .cancel:focus,
@@ -662,6 +673,7 @@ nav.post-controls .cancel.show-replies:focus,
   nav.post-controls button.btn-danger:hover,
   nav.post-controls .btn-danger.show-replies:hover,
   .small-action button.btn-danger:hover,
+  .topic-map .buttons .btn-danger.btn:hover,
   .topic-map .link-summary a.btn-danger:hover,
   .topic-meta-data .post-info a.btn-danger:hover,
   #reply-control .contents .submit-panel .btn-danger.cancel:hover,
@@ -683,6 +695,7 @@ nav.post-controls .cancel.show-replies:focus,
   nav.post-controls button.cancel:hover,
   nav.post-controls .cancel.show-replies:hover,
   .small-action button.cancel:hover,
+  .topic-map .buttons .cancel.btn:hover,
   .topic-map .link-summary a.cancel:hover,
   .topic-meta-data .post-info a.cancel:hover,
   #reply-control .contents .submit-panel .cancel:hover,
@@ -709,6 +722,7 @@ div.poll .poll-buttons a.btn-primary,
 nav.post-controls button.btn-primary,
 nav.post-controls .btn-primary.show-replies,
 .small-action button.btn-primary,
+.topic-map .buttons .btn-primary.btn,
 .topic-map .link-summary a.btn-primary,
 .topic-meta-data .post-info a.btn-primary,
 #reply-control .contents .submit-panel .btn-primary.cancel,
@@ -734,6 +748,7 @@ div.poll .poll-buttons a.btn-primary:focus,
 nav.post-controls button.btn-primary:focus,
 nav.post-controls .btn-primary.show-replies:focus,
 .small-action button.btn-primary:focus,
+.topic-map .buttons .btn-primary.btn:focus,
 .topic-map .link-summary a.btn-primary:focus,
 .topic-meta-data .post-info a.btn-primary:focus,
 #reply-control .contents .submit-panel .btn-primary.cancel:focus,
@@ -760,6 +775,7 @@ nav.post-controls .btn-primary.show-replies:focus,
   nav.post-controls button.btn-primary:hover,
   nav.post-controls .btn-primary.show-replies:hover,
   .small-action button.btn-primary:hover,
+  .topic-map .buttons .btn-primary.btn:hover,
   .topic-map .link-summary a.btn-primary:hover,
   .topic-meta-data .post-info a.btn-primary:hover,
   #reply-control .contents .submit-panel .btn-primary.cancel:hover,
@@ -786,6 +802,7 @@ div.poll .poll-buttons a.btn-success,
 nav.post-controls button.btn-success,
 nav.post-controls .btn-success.show-replies,
 .small-action button.btn-success,
+.topic-map .buttons .btn-success.btn,
 .topic-map .link-summary a.btn-success,
 .topic-meta-data .post-info a.btn-success,
 #reply-control .contents .submit-panel .btn-success.cancel,
@@ -807,6 +824,7 @@ div.poll .poll-buttons a.ok,
 nav.post-controls button.ok,
 nav.post-controls .ok.show-replies,
 .small-action button.ok,
+.topic-map .buttons .ok.btn,
 .topic-map .link-summary a.ok,
 .topic-meta-data .post-info a.ok,
 #reply-control .contents .submit-panel .ok.cancel,
@@ -832,6 +850,7 @@ div.poll .poll-buttons a.btn-success:focus,
 nav.post-controls button.btn-success:focus,
 nav.post-controls .btn-success.show-replies:focus,
 .small-action button.btn-success:focus,
+.topic-map .buttons .btn-success.btn:focus,
 .topic-map .link-summary a.btn-success:focus,
 .topic-meta-data .post-info a.btn-success:focus,
 #reply-control .contents .submit-panel .btn-success.cancel:focus,
@@ -853,6 +872,7 @@ div.poll .poll-buttons a.ok:focus,
 nav.post-controls button.ok:focus,
 nav.post-controls .ok.show-replies:focus,
 .small-action button.ok:focus,
+.topic-map .buttons .ok.btn:focus,
 .topic-map .link-summary a.ok:focus,
 .topic-meta-data .post-info a.ok:focus,
 #reply-control .contents .submit-panel .ok.cancel:focus,
@@ -879,6 +899,7 @@ nav.post-controls .ok.show-replies:focus,
   nav.post-controls button.btn-success:hover,
   nav.post-controls .btn-success.show-replies:hover,
   .small-action button.btn-success:hover,
+  .topic-map .buttons .btn-success.btn:hover,
   .topic-map .link-summary a.btn-success:hover,
   .topic-meta-data .post-info a.btn-success:hover,
   #reply-control .contents .submit-panel .btn-success.cancel:hover,
@@ -900,6 +921,7 @@ nav.post-controls .ok.show-replies:focus,
   nav.post-controls button.ok:hover,
   nav.post-controls .ok.show-replies:hover,
   .small-action button.ok:hover,
+  .topic-map .buttons .ok.btn:hover,
   .topic-map .link-summary a.ok:hover,
   .topic-meta-data .post-info a.ok:hover,
   #reply-control .contents .submit-panel .ok.cancel:hover,
@@ -4772,6 +4794,9 @@ nav.post-controls .show-replies i {
   line-height: 1;
   margin: 0;
   vertical-align: middle;
+}
+#topic-title .topic-statuses:empty {
+  display: none;
 }
 
 #reply-control {
