--- a/scss/common.scss
+++ b/scss/common.scss
@@ -28,6 +28,7 @@
 // - Notification
 // - Picker
 // - Post
+// - Progress
 // - Reply
 // - Share
 // - Timeline
@@ -63,6 +64,7 @@
 @import 'common/notification';
 @import 'common/picker';
 @import 'common/post';
+@import 'common/progress';
 @import 'common/reply';
 @import 'common/share';
 @import 'common/timeline';
