WIP: clean up - table

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -31,6 +31,7 @@
 // - Progress
 // - Reply
 // - Share
+// - Table
 // - Timeline
 // - Topic list
 //   - Category list
@@ -67,6 +68,7 @@
 @import 'common/progress';
 @import 'common/reply';
 @import 'common/share';
+@import 'common/table';
 @import 'common/timeline';
 @import 'common/topic-list';
 @import 'common/topic-list-category';
