--- a/scss/common/_topic-list-category.scss
+++ b/scss/common/_topic-list-category.scss
@@ -95,12 +95,12 @@
 }
 
 .category-list {
-  @include table;
+  @extend %table;
 
   tbody {
     td,
     th {
-      @include tbody-cell;
+      @extend %tbody-cell;
 
       &:first-of-type {
         padding-left: ($tbody-cell-padding-x * 2);
@@ -124,7 +124,7 @@
 
   > tbody {
     > tr {
-      @include table-row;
+      @extend %table-row;
 
       &:first-child {
         border-top: 0;
@@ -139,7 +139,7 @@
   thead {
     td,
     th {
-      @include thead-cell;
+      @extend %thead-cell;
 
       &:first-of-type {
         padding-left: ($thead-cell-padding-x * 2);
@@ -158,7 +158,7 @@
 
   > thead {
     > tr {
-      @include table-row;
+      @extend %table-row;
     }
   }
 
